--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
