--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "firebase": "^10.1.0",
+    "nanoid": "^4.0.2",
     "next": "13.4.13",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
