--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/draft-js": "^0.11.12",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "draft-js": "^0.11.7",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "firebase": "^10.1.0",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
   }
